# computer-vision-cpp

./: .gitignore  CMakeLists.txt
src/: main.cpp
